--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "fastclick": "^1.0.6",
+    "three": "^0.88.0",
     "vue": "^2.5.2",
     "vue-mui": "^2.0.0",
     "vue-router": "^3.0.1"
