--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^17.1.1",
     "fastclick": "^1.0.6",
     "three": "^0.88.0",
     "vue": "^2.5.2",
